filter alignment correction

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 #sidebar-wrapper {
   padding-top: 4rem;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   min-height: 100vh;
   margin-left: -15rem;
   -webkit-transition: margin 0.25s ease-out;
